syntax = "proto3";

package user;

service UserService {
    rpc getDetails (UserId) returns (Details) {}
    rpc insertDetails (Details) returns (Details) {}
    rpc delete (UserId) returns (Details) {}
}

message Empty {}

message UserId {
    string id = 1;
}

message Details {
    string id = 1;
    string name = 2;
}